--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ subprojects {
     apply plugin: 'maven-publish'
 
     group = 'github.scarsz.pluginmessageframework'
-    version = "1.0.0-SNAPSHOT"
+    version = "1.1.0"
 
     repositories {
         mavenCentral()
